--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -30,53 +30,39 @@
 	      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 	      <![endif]-->
+
+	      <!-- script to resize menu bar -->
+
+	      <script type="text/javascript">
+	      	$(document).on("scroll",function(){
+	      		if($(document).scrollTop()>100){
+	      			$("header").removeClass("large").addClass("small");
+	      		} else{
+	      			$("header").removeClass("small").addClass("large");
+	      		}
+	      	});
+	      </script>
 	</head>
 
 	<body>
 
 	  	<!-- Fixed navbar -->
-		<div class="navbar-fixed-top margin5pct" style="margin-top:0px">
-	  		<div id="about" class="section">
-	  			<div class="section-title"><i class="icon-cog"></i><strong>About</strong>
-	  				<p>our <span>team</span></p>
-	  			</div>
-	  		</div>
-
-	  		<div id="services" class="section">
-	  			<div class="section-title"><i class="icon-cog"></i><strong>Services</strong>
-	  				<p> the scope &<span> hope</span></p>
-	  			</div>
-	  		</div>
-
-	  		<div id="folio" class="section">
-	  			<div class="section-title"><i class="icon-briefcase"></i><strong>folio</strong>
-	  				<p>Achievements <span>Unlocked</span></p>
-	  			</div>  
-	  		</div>
-
-	  		<div id="blog" class="section">
-	  			<div class="section-title"><i class="icon-comments"></i><strong>Blog</strong>
-	  				<p>Authors of the<span> web</span></p>
-	  			</div>
-	  		</div>
-
-	  		<div id="contact" class="section">
-	  			<div class="section-title"><i class="icon-envelope-alt"></i><strong>Contact</strong>
-	  				<p> Send us your<span> smile</span></p>
-	  			</div>  
-	  		</div>
+	  	<div class="navbar-fixed-top">
+		  	<header class='large'>
+		  		<nav>
+		  			<img class='logo' src="assets/img/bodhi_animated.gif"/>
+		  			<ul>
+		  				<li><a href="#">Home</a></li>
+		  				<li><a href="#">About Us</a></li>
+		  				<li><a href="#">Services</a></li>
+		  				<li><a href="#">Contact</a></li>
+		  			</ul> 
+		  		</nav>
+		  	</header>
 	  	</div>
 
-	  	<div id="hello" style="background:url('assets/img/background.png')">
-	  		<div id="chapter1" class="container">
-	  			<div class="row">
-	  				<div class="col-lg-8 col-lg-offset-2 centered">
-	  					<img src="assets/img/bodhi_animated.gif" height="50%" width="50%" alt="">
-	  				</div><!-- /col-lg-8 -->
-	  			</div><!-- /row -->
-	  		</div> <!-- /container -->
-	  	</div><!-- /hello -->
-
+	  	<div id='chapter1' class="container padding40">
+	  	</div>
 
 	  	<div id="chapter2" class="container padding40">
 	  		<div id="item-left">
