Added overlays for each sections and more...
-overlays
-added some content
-edited divisions inside index.html
-added scripts to make the overlays appear and disappear

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -62,25 +62,41 @@
 	  	</div>
 
 	  	<div id='chapter1' class="container padding40">
-	  	</div>
 
-	  	<div id="chapter2" class="container padding40">
+	  	<div id="chapter2" class="padding40 container"></div>
+
+	  	<div class="container position-rel">
+	  		<div id='about-us-overlay' class='overlay'>
+	  			<div class="row">
+	  				something
+	  				<button id="about-more-close" height="100%" width="100%"><img scr="assets/img/more.png"></button>
+	  			</div>
+	  		</div>
 	  		<div id="item-left">
 	  			<img src="assets/img/about-us.png" alt="" class="rotate" height="80%" width="80%">
 	  		</div>
 	  		<div id="item-right">
 	  			<label class="inner-header">About Us</label>
 	  			<div>
-	  				Blah blah blah blah blah....
+	  				Bodhi Info Solutions is a trusted IT System Integrator in India & Middle East. Founded by a team of keen individuals with an extraordinarily flawless vision of the future, Bodhi is a master provider of a wide range of IT Business Solutions, Management Solutions and Managed Services to cater to the ever-changing IT and business needs of region.
+
+	  				<button id="about-more" height="100%" width="100%"><img scr="assets/img/more.png"></button>
 	  			</div>
 	  		</div>
 	  	</div><!-- /container -->
 
-	  	<div id="chapter3" class="container padding40">
+	  	<div id="chapter3" class="padding40 container"></div>
+
+	  	<div class="container position-rel">
+	  		<div id='services-overlay' class='overlay'>
+	  			something
+	  			<button id="services-close" height="100%" width="100%"><img scr="assets/img/more.png"></button>
+	  		</div>
 	  		<div id="item-left">
 	  			<label class="inner-header">Services</label>
 	  			<div>
 	  				Blah blah blah blah blah....
+	  				<button id="services-more" height="100%" width="100%"><img scr="assets/img/more.png"></button>
 	  			</div>
 	  		</div>
 	  		<div id="item-right">
@@ -88,19 +104,29 @@
 	  		</div>
 	  	</div><!-- /container -->	
 
-	  	<div id="chapter4" class="container padding40">
+	  	<div id="chapter4" class="padding40 container"></div>
+
+	  	<div class="container position-rel">
+	  		<div id='contact-overlay' class='overlay'>
+	  			something
+	  			<button id="contact-close" height="100%" width="100%"><img scr="assets/img/more.png"></button>
+	  		</div>
 	  		<div id="item-left">
 	  			<img src="assets/img/contact-us.png" class="rotate" alt="" height="80%" width="80%">
 	  		</div>
 	  		<div id="item-right">
-	  			<label class="inner-header">Contact Us</label>
+	  			<label class="inner-header">Contact</label>
 	  			<div>
-	  				Blah blah blah blah blah....
-	  			</div>-us
+	  				We’d love to hear from you. Whether you want to learn more about our services, chat about your project or just to say hello.<br /><br />
+	  				Let’s connect!
+	  				<button id="contact-more" height="100%" width="100%"><img scr="assets/img/more.png"></button>
+	  			</div>
 	  		</div>
 	  	</div><!-- /container -->
 
-	  	<div id="chapter5" class="padding40">
+	  	<div id="chapter5" class="padding40 container"></div>
+
+	  	<div>
 		  	<div id="social">
 		  		<div class="container">
 		  			<div class="row centered">
