--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -16,32 +16,18 @@
 		<link href="assets/css/main.css" rel="stylesheet">
 		<link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
-		<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-		<script src="assets/js/chart.js"></script>
-		<script src="assets/js/script.js"></script>
-
-		<!-- New Menu imports -->
+		<!-- New Menu imports to auto resize menu bar -->
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/multicolor.css" />
 
+		<!-- New menu style import -->
+		<link rel="stylesheet" href="assets/css/responsivemobilemenu.css" type="text/css"/>
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	    <!--[if lt IE 9]>
 	      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 	      <![endif]-->
-
-	      <!-- script to resize menu bar -->
-
-	      <script type="text/javascript">
-	      	$(document).on("scroll",function(){
-	      		if($(document).scrollTop()>100){
-	      			$("header").removeClass("large").addClass("small");
-	      		} else{
-	      			$("header").removeClass("small").addClass("large");
-	      		}
-	      	});
-	      </script>
 	</head>
 
 	<body>
@@ -49,15 +35,15 @@
 	  	<!-- Fixed navbar -->
 	  	<div class="navbar-fixed-top">
 		  	<header class='large'>
-		  		<nav>
+		  		<div class="rmm" style="float:right;">
 		  			<ul>
-		  				<li><a href="#">Home</a></li>
-		  				<li><a href="#">About Us</a></li>
-		  				<li><a href="#">Services</a></li>
-		  				<li><a href="#">Contact</a></li>
-		  			</ul> 
-		  		</nav>
-		  		<label class="tagline">Welcome to Bodhi. Nice to meet you.</label>
+		  				<li><a href='#'>Home</a></li>
+		  				<li><a href='#'>About Us</a></li>
+		  				<li><a href='#'>Services</a></li>
+		  				<li><a href='#'>Contact</a></li>
+		  			</ul>
+		  		</div>
+		  		<label class="tagline">Enlighten Your Thoughts.</label>
 		  	</header>
 	  	</div>
 
@@ -68,17 +54,17 @@
 	  	<div class="container position-rel">
 	  		<div id='about-us-overlay' class='overlay'>
   				something
-  				<button id="about-more-close" height="100%" width="100%"><img scr="assets/img/more.png"></button>
+  				<button id="about-more-close" class='close-button'><img src="assets/img/close.png" width="50%" height="50%"></button>
 	  		</div>
-	  		<div id="item-left">
-	  			<img src="assets/img/about-us.png" alt="" class="rotate" height="80%" width="80%">
+	  		<div id="item-image-left">
+	  			<img src="assets/img/about-us.png" alt="" class="rotate" height="70%" width="70%">
 	  		</div>
-	  		<div id="item-right">
+	  		<div id="item-text-right">
 	  			<label class="inner-header">About Us</label>
 	  			<div>
-	  				Bodhi Info Solutions is a trusted IT System Integrator in India & Middle East. Founded by a team of keen individuals with an extraordinarily flawless vision of the future, Bodhi is a master provider of a wide range of IT Business Solutions, Management Solutions and Managed Services to cater to the ever-changing IT and business needs of region.
+	  				Bodhi Info Solutions is a trusted IT System Integrator in India & Middle East. Founded by a team of keen individuals with an extraordinarily flawless vision of the future, Bodhi is a master provider of a wide range of IT Business Solutions, Management Solutions and Managed Services to cater to the ever-changing IT and business needs of region.<br ><br />Read more
 
-	  				<button id="about-more" height="100%" width="100%"><img scr="assets/img/more.png"></button>
+	  				<button id="about-more" class='more-button'><img src="assets/img/more.png" width="50%" height="50%" ></button>
 	  			</div>
 	  		</div>
 	  	</div><!-- /container -->
@@ -88,36 +74,41 @@
 	  	<div class="container position-rel">
 	  		<div id='services-overlay' class='overlay'>
 	  			something
-	  			<button id="services-close" height="100%" width="100%"><img scr="assets/img/more.png"></button>
+	  			<button id="services-close" class='close-button'><img src="assets/img/close.png" width="50%" height="50%"></button>
 	  		</div>
-	  		<div id="item-left">
+	  		<div id="item-text-left">
 	  			<label class="inner-header">Services</label>
 	  			<div>
-	  				Blah blah blah blah blah....
-	  				<button id="services-more" height="100%" width="100%"><img scr="assets/img/more.png"></button>
+	  				WEB DEVELOPMENT<br /><br />
+	  				Bodhi a leading web development services company, offers cost effective web development solutions to the small, medium, and large corporate businesses. Our web developers utilize solid domain experience, technical expertise, and knowledge of the latest technologies.<br /><br />
+
+					MOBILE DEVELOPMENT<br /><br />
+					Modern world is moving in the fastest pace. It is impossible to imagine it without Mobile Technologies. Why Mobile Applications? They are necessary to enhance the productiveness, manage finances, for navigation, communication and entertainment. Is this list long enough? <br /><br >Read more
+										
+	  				<button id="services-more" class='more-button'><img src="assets/img/more.png" width="50%" height="50%"></button>
 	  			</div>
 	  		</div>
-	  		<div id="item-right">
-	  			<img src="assets/img/services.png" class="rotate" alt="" height="80%" width="80%">
+	  		<div id="item-image-right">
+	  			<img src="assets/img/services.png" class="rotate" alt="" height="70%" width="70%">
 	  		</div>
 	  	</div><!-- /container -->	
 
 	  	<div id="chapter4" class="padding40 container"></div>
 
-	  	<div class="container position-rel">
+	  	<div id='contact-div' class="container position-rel">
 	  		<div id='contact-overlay' class='overlay'>
 	  			something
-	  			<button id="contact-close" height="100%" width="100%"><img scr="assets/img/more.png"></button>
+	  			<button id="contact-close" class='close-button'><img src="assets/img/close.png" width="50%" height="50%"></button>
 	  		</div>
-	  		<div id="item-left">
-	  			<img src="assets/img/contact-us.png" class="rotate" alt="" height="80%" width="80%">
+	  		<div id="item-image-left">
+	  			<img src="assets/img/contact-us.png" class="rotate" alt="" height="70%" width="70%">
 	  		</div>
-	  		<div id="item-right">
+	  		<div id="item-text-right">
 	  			<label class="inner-header">Contact</label>
 	  			<div>
 	  				We’d love to hear from you. Whether you want to learn more about our services, chat about your project or just to say hello.<br /><br />
-	  				Let’s connect!
-	  				<button id="contact-more" height="100%" width="100%"><img scr="assets/img/more.png"></button>
+	  				Let’s connect!<br ><br />Read more
+	  				<button id="contact-more" class='more-button'><img src="assets/img/more.png" width="50%" height="50%"></button>
 	  			</div>
 	  		</div>
 	  	</div><!-- /container -->
@@ -160,5 +151,20 @@
 	    <!-- Placed at the end of the document so the pages load faster -->
 	    <script src="assets/js/bootstrap.js"></script>
 	    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+		<script src="assets/js/script.js"></script>
+
+		<!-- Script for responsive menu bar -->
+		<script type="text/javascript" src="assets/js/responsivemobilemenu.js"></script>
+		<script type="text/javascript">
+			$(document).on("scroll",function(){
+				if($(document).scrollTop()>100){
+					$("header").removeClass("large").addClass("small");
+				} else{
+					$("header").removeClass("small").addClass("large");
+				}
+			});
+		</script>
+
 	</body>
 </html>
