--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -43,6 +43,7 @@
 		  				<li><a href='#'>Contact</a></li>
 		  			</ul>
 		  		</div>
+		  		<img src="assets/img/bodhi.png">
 		  		<label class="tagline">Enlighten Your Thoughts.</label>
 		  	</header>
 	  	</div>
